--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=bytecast-test
+application.vendor=shawn
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -24,10 +25,17 @@ debug.test.classpath=\
 dist.dir=dist
 dist.jar=${dist.dir}/bytecast-test.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 includes=**
+jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
-javac.classpath=
+jar.index=${jnlp.enabled}
+javac.classpath=\
+    ${reference.bytecast-common.jar}:\
+    ${reference.bytecast-amd64.jar}:\
+    ${reference.bytecast-fsys.jar}:\
+    ${reference.bytecast-jimple.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -51,11 +59,28 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jnlp.codebase.type=no.codebase
+jnlp.descriptor=application
+jnlp.enabled=false
+jnlp.mixed.code=default
+jnlp.offline-allowed=false
+jnlp.signed=false
+jnlp.signing=
+jnlp.signing.alias=
+jnlp.signing.keystore=
 main.class=bytecast.test.BytecastTest
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
+project.bytecast-amd64=../bytecast-amd64/bytecast-amd64
+project.bytecast-common=../bytecast-common/bytecast-common
+project.bytecast-fsys=../bytecast-fsys/dev/bytecast.fsys
+project.bytecast-jimple=../bytecast-jimple/bytecast-jimple
+reference.bytecast-amd64.jar=${project.bytecast-amd64}/dist/bytecast-amd64.jar
+reference.bytecast-common.jar=${project.bytecast-common}/dist/bytecast-common.jar
+reference.bytecast-fsys.jar=${project.bytecast-fsys}/dist/bytecast-fsys.jar
+reference.bytecast-jimple.jar=${project.bytecast-jimple}/dist/bytecast-jimple.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
