FSysBasicTest "test" function implemented

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,9 +33,7 @@ jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
     ${reference.bytecast-common.jar}:\
-    ${reference.bytecast-amd64.jar}:\
-    ${reference.bytecast-fsys.jar}:\
-    ${reference.bytecast-jimple.jar}
+    ${reference.bytecast-fsys.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -68,19 +66,15 @@ jnlp.signed=false
 jnlp.signing=
 jnlp.signing.alias=
 jnlp.signing.keystore=
-main.class=bytecast.test.BytecastTest
+main.class=edu.syr.bytecast.test.ByteCastTest
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
-project.bytecast-amd64=../bytecast-amd64/bytecast-amd64
 project.bytecast-common=../bytecast-common/bytecast-common
 project.bytecast-fsys=../bytecast-fsys/dev/bytecast.fsys
-project.bytecast-jimple=../bytecast-jimple/bytecast-jimple
-reference.bytecast-amd64.jar=${project.bytecast-amd64}/dist/bytecast-amd64.jar
 reference.bytecast-common.jar=${project.bytecast-common}/dist/bytecast-common.jar
 reference.bytecast-fsys.jar=${project.bytecast-fsys}/dist/bytecast-fsys.jar
-reference.bytecast-jimple.jar=${project.bytecast-jimple}/dist/bytecast-jimple.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
