Modified files for cob testing

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,13 +27,16 @@ dist.jar=${dist.dir}/bytecast-test.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.tools-junit-4.10=../tools/junit-4.10
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${reference.bytecast-common.jar}:\
-    ${reference.bytecast-fsys.jar}
+    ${file.reference.tools-junit-4.10}:\
+    ${reference.bytecast-fsys.jar}:\
+    ${reference.bytecast-amd64.jar}:\
+    ${reference.bytecast-common.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -53,6 +56,7 @@ javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.private=false
+javadoc.reference.tools-junit-4.10=../tools/junit-4.10/junit-4.10.jar
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
@@ -66,13 +70,15 @@ jnlp.signed=false
 jnlp.signing=
 jnlp.signing.alias=
 jnlp.signing.keystore=
-main.class=edu.syr.bytecast.test.ByteCastTest
+main.class=edu.syr.bytecast.test.amd64.Amd64BasicTest
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
+project.bytecast-amd64=../bytecast-amd64/bytecast-amd64
 project.bytecast-common=../bytecast-common/bytecast-common
 project.bytecast-fsys=../bytecast-fsys/dev/bytecast.fsys
+reference.bytecast-amd64.jar=${project.bytecast-amd64}/dist/bytecast-amd64.jar
 reference.bytecast-common.jar=${project.bytecast-common}/dist/bytecast-common.jar
 reference.bytecast-fsys.jar=${project.bytecast-fsys}/dist/bytecast-fsys.jar
 run.classpath=\
